--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
+.header{
+  width: 100vw;
+  height: 100px;
+  background-color: rgb(167, 185, 0);
+  margin: 0;
+  color: white;
+  font-weight: bolder;
+  font-size: 50px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header div{
+  bottom: 20px 0 0 0;
+}
+p{
+  margin: 15px;
+}
+input{
+  border: solid 0.5px rgba(192, 192, 192, 0.39);
+  width: 400px;
+  height: 200px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  margin: 0;
+}
+h2{
+  margin: 15px 5px;
+}
+.itemList{
+  border: solid 0.5px rgba(192, 192, 192, 0.39);
+  padding: 16px;
+  width: 240px;
+  height: 1000px;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.content{
+  padding: 20px 5px;
+  border-bottom: 1px solid #c7c7c7;
+  list-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+.title{
+  width: 900px;
+  height: 1000px;
+  position: absolute;
+  left: 400px;
+}
+.right{
+  float:right;
+  margin: 0;
+}
+.input{
+  width: 600px;
+  height: 1000px;
+}
+.left{
+  float:left;
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  border:none;
 }
